--- a/src/style.css
+++ b/src/style.css
@@ -1,193 +1,160 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;600;700&display=swap");
 
 :root {
-  --sec: red;
   --main: #13160c;
   --third: #989898;
   --fourth: #eef3f0;
-  --text: #b3dcc4;
+  
+}
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  background-color: var(--fourth);
-  font-family: "Karla", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  font-family: "Merriweather", serif;
+  background-color: var(--main);
+  color: var(--fourth);
+}
+
+.btn {
+  color: var(--main);
+  background-color: var( --third);
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  padding: 5px;
+  font-size: 14px;
+  border: 1px solid var(--main);
+  border-radius: 2.5px;
+}
+
+.btn:hover {
+  cursor: pointer;
+  filter: drop-shadow(2px 3px 0 var(--fourth));
+  transform: translateY(-1px);
 }
 
 main {
+  margin: 5% 20%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
-.listCont {
-  background-color: var(--main);
-  min-width: 90%;
-  box-shadow:
-    0 10px 15px -3px rgba(0, 0, 0, 0.1),
-    0 10px 15px -3px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  margin-top: 5rem;
+h1 {
+  align-items: center;
+  font-size: 2.2rem;
+  margin-bottom: 20px;
 }
 
-.title {
-  font-size: 1.4rem;
-  padding: 15px;
+.game-container {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  gap: 50px;
+  min-width: 300px;
+}
+
+.title-container {
+  margin-bottom: 10px;
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid var(--sec);
-  color: var(--text);
-  font-weight: 600;
+  align-items: center;
 }
 
-i {
-  color: var(--third);
-}
-
-i:not(.enter) {
-  cursor: pointer;
-}
-
-i:not(.enter):hover {
-  color: var(--text);
-}
-
-ul {
-  list-style: none;
-  padding: 0;
+.scores-container,
+.form {
   width: 100%;
-  margin: 0;
+  padding: 0 30px;
 }
 
-li {
+.scores {
+  border: 1px solid var(--fourth);
+  border-radius: 2.5px;
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.scores::-webkit-scrollbar {
+  width: 0.4em;
+}
+
+.scores::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(19, 19, 19, 0.3);
+}
+
+.scores::-webkit-scrollbar-thumb {
+  background-color: var( --third);
+}
+
+.scores-list {
+  width: 100%;
+  color: var(--fourth);
+}
+
+.scores-list td {
+  padding: 5px;
+}
+
+tr:nth-child(odd) {
+  background-color: rgb(249 224 187 / 43%);
+}
+
+form {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 15px;
-  border-bottom: 1px solid var(--sec);
-  font-size: 18px;
-}
-
-.checkList {
-  position: relative;
-  margin-right: 10px;
-}
-
-li .checkList {
-  display: flex;
-  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
 input {
-  border: none;
-  color: aqua;
-  background: transparent;
-  font-size: 18px;
-  font-style: italic;
-  outline: 0;
+  padding: 5px;
+  outline: var( --third);
+  background: var(--fourth);
+  border: 1px solid var(--fourth);
+  border-radius: 2.5px;
 }
 
-.checkList input {
-  margin-right: 10px;
-  font-style: normal;
-}
-
-#add {
-  padding: 15px;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid var(--sec);
-}
-
-#add i {
-  transform: rotate(90deg);
-  margin-right: 2px;
-}
-
-.clearCont {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-  background-color: var(--fourth);
-}
-
-.clearCont .clrBtn {
-  outline: none;
+input::placeholder {
   color: var(--main);
-  border: none;
-  background: inherit;
-  line-height: 1.5rem;
-  font-size: inherit;
-  cursor: pointer;
 }
 
-.completed {
-  transition: opacity 0.3s ease-in-out;
-  text-decoration: line-through var(--text);
-  color: gray;
-}
-
-.refresh:hover {
-  transform: rotateZ(90deg);
-}
-
-.task-item:hover {
-  background-color: var(--sec);
-}
-
-.chcek {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  width: 20px;
-  height: 20px;
-  border-radius: 4px;
-  border: 2px solid transparent; /* Hide the square border */
-  background-color: var(--fourth);
-  position: relative;
-  cursor: pointer;
-  outline: none;
-}
-
-.chcek:checked {
-  background-color: var(--fourth);
-}
-
-.chcek::after {
-  content: "\2713"; /* Checkmark character */
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 16px;
-  color: #000;
-  transition: opacity 0.3s ease-in-out;
-  opacity: 0; /* Initially hide the checkmark */
-}
-
-.chcek:checked::after {
-  opacity: 1; /* Show the checkmark when checked */
-}
-
-.inputDesc {
-  border: none;
-  outline: none;
-  background-color: transparent;
-  font-size: 16px;
-  color: var(--text);
-  padding: 2px;
+button {
+  align-self: flex-end;
 }
 
 @media screen and (min-width: 768px) {
-  .listCont {
-    background-color: var(--main);
-    min-width: 50%;
-    box-shadow:
-      0 10px 15px -3px rgba(0, 0, 0, 0.1),
-      0 10px 15px -3px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    margin-top: 5rem;
+  main {
+    padding: 5% 10%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .game-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 50px;
+    min-width: 800px;
+    margin-top: 25px;
+  }
+
+  h1 {
+    align-self: start;
+    font-size: 2.5rem;
+    font-weight: 900;
+  }
+
+  h3 {
+    font-size: 1.6rem;
+  }
+
+  .form {
+    align-self: start;
   }
 }
